# codecrafters-redis-c

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  config.in  spawn_redis_server.sh  vcpkg.json
include/: array.h  parser.h  pch.h  string_t.h  tcp.h
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/golang.org/x/tools/: gopls@v0.15.3
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/0/x101/108.p/: 94
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/1/394.p/: 244
pkg/sumdb/sum.golang.org/: latest
src/: server.c  tcp.c
